# schemarecomb

./: .gitignore  .readthedocs.yaml  README.md  README.rst  conftest.py  generate_gg_dna.py  ggsr  mypy.ini  normalized_ligation_counts_18h_37C.p  pyproject.toml  raspp_tools.py  read_raspp_GG_output.py  run_config.yaml  run_raspp.py  setup.cfg  step1.py  step2.py  step3.py  step4.py
.github/workflows/: ggrecomb.yml  schemarecomb-ci.yml
Step1/: generate_alignments.py  generate_contacts.py  test_seqs.fasta  tools.py
Step1/Old/: 20180803_aligned_seqs.fasta
Step2/: raspp_tools.py  run_raspp.py
doc/: Makefile  requirements.txt
doc/source/: biologists.rst  conf.py  contribute.rst  index.rst  install.rst  programmers.rst  quickstart.rst  reference.rst
doc/source/static/: functions.css
doc/source/templates/: class.rst  class_or_function.rst  module.rst
ggsr/: __init__.py  energy_functions.py  library.py  raspp.py
ggsr/parent_alignment/: __init__.py  blast_query.py  choose_candidates.py  choose_from_candidates.py  parent_alignment.py  pdb_structure.py  utils.py
ggsr/tools/: general_tools.py
src/ggrecomb/: __init__.py  blast.py  breakpoints.py  energy_functions.py  libraries.py  library.py  optimizers.py  pa_candidates.py  parent_alignment.py  pdb_structure.py  raspp.py  restriction_enzymes.py  utils.py
src/ggrecomb/gg_data/: BbsI-HF.csv  BsaI-HFv2.csv  BsmBI-v2.csv  Esp3I.csv  SapI.csv
src/ggrecomb/parent_alignment/: parent_alignment.py  pdb_structure.py
src/ggsr/: library.py  step3.py
src/ggsr/parent_alignment/: blast.py  parent_candidates.py  utils.py
src/old/: README.txt  step1.py  step4.py
src/old/tools/: step2_tools.py  step4_tools.py
src/schemarecomb/: __init__.py  breakpoints.py  energy_functions.py  libraries.py  optimizers.py  parent_alignment.py  pdb_structure.py  restriction_enzymes.py
src/schemarecomb/gg_data/: README.txt
tests/: README.txt  conftest.py  test_parent_alignment.py
tests/bgl3_sample/: blast_get_20210622.txt  blast_put_20210622.txt  blast_put_pdb_20210628.txt  get_names_pdb_20210628.txt  run_config.yaml
tests/bgl3_sample/truncated/: trunc.py
tests/fixtures/bgl3_1-parent/: found_parents.fasta  found_parents_aln.fasta
tests/fixtures/bgl3_50-aa/: bgl3_trunc_aln.fasta  generate_bgl3_truncated.py
tests/fixtures/bgl3_full/: bgl3_sequences.fasta  bgl3_sequences_aln.fasta  run_config.yaml
tests/fixtures/bgl3_full/http/: README.txt  blast_pdb_fasta_20210628.txt  blast_pdb_status_20210628.txt  blast_refseq_fasta_20210622.txt
tests/fixtures/bgl3_single/: bgl3_p0.fasta
tests/fixtures/bgl3_truncated/: generate_bgl3_truncated.py
tests/unit/: old_test_parent_alignment.py  test_breakpoints.py  test_energy_functions.py  test_libraries.py  test_optimizers.py  test_parent_alignment.py  test_pdb_structure.py  test_restriction_enzymes.py
tools/: general_tools.py  pd_normalized_ligation_counts_18h_37C.p  step1_tools.py  step2_tools.py  step4_tools.py
