[tool.poetry]
name = 'ggrecomb'
version = '0.0.1'
description = 'Design recombinant protein libraries for Golden Gate Assembly.'
authors = ['Bennett Bremer <bennettjamesbremer@gmail.com>']

[tool.poetry.dependencies]
python = '3.9'
biopython = '^1.79'
scipy = '^1.6.3'

[tool.poetry.dev-dependencies]
pytest = '^6.2.4'
sphinx = '^4.0.1'

[tool.poetry.scripts]
ggrecom = {reference = "bin/ggrecom", type="file"}

[build-system]
requires = ["poetry-core>=1.1.0a5"]
build-backend = "poetry.core.masonry.api"
