[metadata]
name = ggsr
version = 0.0.1
author = Bennett Bremer
author_email = bennettjamesbremer@gmail.com
description = Recombinant protein libraries using SCHEMA-RASPP and Golden Gate.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bbremer/Golden-Gate-SCHEMA-RASPP
project_urls =
    Bug Tracker = https://github.com/bbremer/Golden-Gate-SCHEMA-RASPP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = ggsr
packages = find:
python_requires = >=3.9

[options.packages.find]
where = ggsr
